fix the alignment issue

--- a/themes/origins/styles/section-multi-column.scss
+++ b/themes/origins/styles/section-multi-column.scss
@@ -1,5 +1,6 @@
 .columns {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: var(--gap-2xl);
+  align-items: baseline;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
